--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
-  "devDependencies": {},
   "peerDependencies": {
     "koishi": "^4.18.7"
+  },
+  "dependencies": {
+    "@satorijs/element": "^3.1.7",
+    "dedent": "^1.5.3"
+  },
+  "devDependencies": {
+    "koishi-plugin-w-reactive": "workspace:^"
   }
 }
