--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-w-wakatime",
   "description": "WillBot: wakatime function",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -18,10 +18,26 @@
     "koishi": "^4.18.7"
   },
   "dependencies": {
-    "@satorijs/element": "^3.1.7",
-    "dedent": "^1.5.3"
+    "@satorijs/element": "^3.1.7"
   },
   "devDependencies": {
-    "koishi-plugin-w-reactive": "workspace:^"
+    "koishi-plugin-w-echarts": "workspace:^"
+  },
+  "koishi": {
+    "service": {
+      "required": [
+        "database",
+        "http",
+        "server"
+      ],
+      "optional": [
+        "echarts"
+      ]
+    }
+  },
+  "scripts": {
+    "build": "yarn workspace willbot build w-wakatime",
+    "bump": "yarn workspace willbot bump w-wakatime",
+    "pub": "yarn workspace willbot pub w-wakatime"
   }
 }
